--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <a-scene embedded arjs>
       <a-marker preset="hiro">
-       <a-image src="wife of bath test.png" position="0 0 0" rotation="-90 0 0" width="2" height="2"></a-image>
+       <a-image src="wife-of-bath-test.png" position="0 0 0" rotation="-90 0 0" width="2" height="2"></a-image>
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
