--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
   <body>
     <a-scene embedded arjs>
       <a-marker preset="hiro">
-       <a-image src="wife-of-bath-test.png" position="0 0 0" rotation="-90 0 0" width="2" height="2"></a-image>
-      </a-marker>
+       <a-image src="wife-of-bath-test.png" position="0 0.5 0"
+         rotation="-45 0 0"
+         width="2"
+         height="2">
+</a-image>
       <a-entity camera></a-entity>
     </a-scene>
   </body>
