--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <body>
     <a-scene embedded arjs>
       <a-marker preset="hiro">
-       <a-image src="wife-of-bath-test.png" position="0 0.5 0"
+       <a-image src="wife-of-bath-test.png"
+         position="0 0.5 0"
          rotation="-45 0 0"
          width="2"
          height="2">
