--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@
     <a-scene embedded arjs>
       <a-marker preset="hiro">
         <a-image 
-          src="wife-of-bath-test.png"
-          position="0 0.5 0"
-          rotation="-45 0 0"
-          width="2"
-          height="2">
+          src="wife-of-bath-test.png" position="0 0 0" rotation="-90 0 0" width="2" height="2">
         </a-image>
       </a-marker>
       <a-entity camera></a-entity>
