--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
     <script src="https://cdn.rawgit.com/jeromeetienne/ar.js/2.2.1/aframe/build/aframe-ar.min.js"></script>
     <style>
       body { margin: 0; overflow: hidden; }
+      a-scene { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
     </style>
   </head>
   <body>
     <a-scene embedded arjs>
       <a-marker preset="hiro">
         <a-image 
-          src="wife-of-bath-test.png" position="0 0 0" rotation="-90 0 0" width="2" height="2">
+          src="wife-of-bath-test.png"
+          position="0 0 0"
+          rotation="-90 0 0"
+          width="1.5"
+          height="1.5">
         </a-image>
       </a-marker>
       <a-entity camera></a-entity>
