--- a/index.html
+++ b/index.html
@@ -1,67 +1,66 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>NCS AR – Photo Cube (Drag to Spin)</title>
+    <meta charset="utf-8" />
+    <title>NCS Postcard AR — Image Tracking</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- A-Frame + AR.js -->
-    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <!-- Updated AR.js URL -->
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <!-- A-Frame + MindAR (official CDN versions) -->
+    <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
+
     <style>
-      body { margin:0; overflow:hidden; }
-      a-scene { position: absolute; inset: 0; touch-action: none; } /* prevent browser gestures */
+      html, body { margin:0; height:100%; overflow:hidden; }
+      a-scene { position: fixed; inset: 0; touch-action: none; }
+      .hint { position:fixed; left:0; right:0; bottom:10px; text-align:center; font:14px/1.3 system-ui; color:#fff; }
     </style>
 
     <!-- Drag / Flick rotation component -->
     <script>
       AFRAME.registerComponent('spin-drag', {
         schema: { sensitivity: {default: 0.4}, inertia: {default: 0.95} },
-        init: function () {
-          this.dragging = false; this.prev = null; this.vel = {x:0,y:0};
-          this.onDown = this.onDown.bind(this);
-          this.onMove = this.onMove.bind(this);
-          this.onUp   = this.onUp.bind(this);
+        init() {
+          this.dragging=false; this.prev=null; this.vel={x:0,y:0};
+          this.onDown=this.onDown.bind(this); this.onMove=this.onMove.bind(this); this.onUp=this.onUp.bind(this);
           this.el.sceneEl.addEventListener('loaded', () => {
-            const canvas = this.el.sceneEl.canvas;
-            canvas.addEventListener('mousedown', this.onDown, {passive:false});
-            window.addEventListener('mousemove', this.onMove, {passive:false});
-            window.addEventListener('mouseup', this.onUp, {passive:false});
-            canvas.addEventListener('touchstart', this.onDown, {passive:false});
-            window.addEventListener('touchmove', this.onMove, {passive:false});
-            window.addEventListener('touchend', this.onUp, {passive:false});
-            window.addEventListener('touchcancel', this.onUp, {passive:false});
+            const c=this.el.sceneEl.canvas;
+            c.addEventListener('mousedown',this.onDown,{passive:false});
+            window.addEventListener('mousemove',this.onMove,{passive:false});
+            window.addEventListener('mouseup',this.onUp,{passive:false});
+            c.addEventListener('touchstart',this.onDown,{passive:false});
+            window.addEventListener('touchmove',this.onMove,{passive:false});
+            window.addEventListener('touchend',this.onUp,{passive:false});
+            window.addEventListener('touchcancel',this.onUp,{passive:false});
           });
         },
-        remove: function () {
-          const canvas = this.el.sceneEl && this.el.sceneEl.canvas; if (!canvas) return;
-          canvas.removeEventListener('mousedown', this.onDown);
-          window.removeEventListener('mousemove', this.onMove);
-          window.removeEventListener('mouseup', this.onUp);
-          canvas.removeEventListener('touchstart', this.onDown);
-          window.removeEventListener('touchmove', this.onMove);
-          window.removeEventListener('touchend', this.onUp);
-          window.removeEventListener('touchcancel', this.onUp);
+        remove() {
+          const c=this.el.sceneEl && this.el.sceneEl.canvas; if(!c) return;
+          c.removeEventListener('mousedown',this.onDown);
+          window.removeEventListener('mousemove',this.onMove);
+          window.removeEventListener('mouseup',this.onUp);
+          c.removeEventListener('touchstart',this.onDown);
+          window.removeEventListener('touchmove',this.onMove);
+          window.removeEventListener('touchend',this.onUp);
+          window.removeEventListener('touchcancel',this.onUp);
         },
-        getPoint: e => (e.touches && e.touches.length) ? {x:e.touches[0].clientX, y:e.touches[0].clientY} : {x:e.clientX, y:e.clientY},
-        onDown: function (e) { e.preventDefault(); this.dragging = true; this.prev = this.getPoint(e); this.vel.x = 0; this.vel.y = 0; },
-        onMove: function (e) {
-          if (!this.dragging) return; e.preventDefault();
-          const p = this.getPoint(e); const dx = p.x - this.prev.x; const dy = p.y - this.prev.y; this.prev = p;
-          this.vel.x = dx; this.vel.y = dy; this.rotateBy(dx, dy);
+        getPoint(e){ return (e.touches&&e.touches.length)?{x:e.touches[0].clientX,y:e.touches[0].clientY}:{x:e.clientX,y:e.clientY}; },
+        onDown(e){ e.preventDefault(); this.dragging=true; this.prev=this.getPoint(e); this.vel.x=0; this.vel.y=0; },
+        onMove(e){
+          if(!this.dragging) return; e.preventDefault();
+          const p=this.getPoint(e), dx=p.x-this.prev.x, dy=p.y-this.prev.y; this.prev=p;
+          this.vel.x=dx; this.vel.y=dy; this.rotateBy(dx,dy);
         },
-        onUp: function () { this.dragging = false; this.prev = null; },
-        rotateBy: function (dx, dy) {false* dy.this.rotateby* const dx 
-          Attribute(rotation)  data.sensitivity; preventDefault
-         getPoint                             
-          const rot = this.el.getAttribute('rotation'); rot.y += dx * t  his.data.sensitivity; rot.x += dy * this.data.sensitivity;
+        onUp(){ this.dragging=false; this.prev=null; },
+        rotateBy(dx,dy){
+          const rot=this.el.getAttribute('rotation');
+          rot.y += dx * this.data.sensitivity;
+          rot.x += dy * this.data.sensitivity;
           this.el.setAttribute('rotation', rot);
         },
-        tick: function (time, dt) {
-          if (this.dragging) return; if (dt == null) dt = 16;
-          const scale = dt / 16;
-          if (Math.abs(this.vel.x) > 0.01 || Math.abs(this.vel.y) > 0.01) {
-            this.rotateBy(this.vel.x * scale, this.vel.y * scale);
-            this.vel.x *= this.data.inertia; this.vel.y *= this.data.inertia;
+        tick(time,dt){ if(this.dragging) return; if(dt==null) dt=16;
+          const scale=dt/16;
+          if(Math.abs(this.vel.x)>0.01 || Math.abs(this.vel.y)>0.01){
+            this.rotateBy(this.vel.x*scale, this.vel.y*scale);
+            this.vel.x*=this.data.inertia; this.vel.y*=this.data.inertia;
           }
         }
       });
@@ -69,8 +68,15 @@
   </head>
 
   <body>
-    <a-scene embedded arjs>
-      <!-- Preload your images -->
+    <!-- MindAR scene: point at your postcard image -->
+    <a-scene
+      mindar-image="imageTargetSrc: ./targets.mind"
+      vr-mode-ui="enabled: false"
+      device-orientation-permission-ui="enabled: false"
+    >
+      <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+
+      <!-- Preload your cube images -->
       <a-assets>
         <img id="hirowife"   src="img/hirowife.png"   crossorigin="anonymous" />
         <img id="hirosquire" src="img/hirosquire.png" crossorigin="anonymous" />
@@ -80,20 +86,33 @@
         <img id="hirotitle"  src="img/hirotitle.png"  crossorigin="anonymous" />
       </a-assets>
 
-      <!-- Marker -->
-      <a-marker preset="hiro">
-        <!-- Photo cube: rotated by user via spin-drag -->
+      <!-- Attach content to the first image in targets.mind -->
+      <a-entity mindar-image-target="targetIndex: 0">
+        <!-- Put the cube slightly above the postcard surface (y = 0.5 * cube size) -->
         <a-entity id="photo-cube" position="0 0.5 0" spin-drag>
-          <a-plane width="1" height="1" position="0 0 0.5"  rotation="0 0 0"   material="src: #hirowife"></a-plane>
-          <a-plane width="1" height="1" position="0 0 -0.5" rotation="0 180 0" material="src: #hirosquire"></a-plane>
-          <a-plane width="1" height="1" position="0.5 0 0"  rotation="0 -90 0" material="src: #hiroknight"></a-plane>
-          <a-plane width="1" height="1" position="-0.5 0 0" rotation="0 90 0"  material="src: #hirofriar"></a-plane>
-          <a-plane width="1" height="1" position="0 0.5 0"  rotation="-90 0 0" material="src: #hirotitle"></a-plane>
-          <a-plane width="1" height="1" position="0 -0.5 0" rotation="90 0 0"  material="src: #hirobottom"></a-plane>
+          <!-- Each face is a 1x1 plane, double-sided so they don't disappear when viewed from behind -->
+          <!-- FRONT (+Z) -->
+          <a-plane width="1" height="1" position="0 0 0.5" rotation="0 0 0"
+                   material="src: #hirowife; side: double"></a-plane>
+          <!-- BACK (-Z) -->
+          <a-plane width="1" height="1" position="0 0 -0.5" rotation="0 180 0"
+                   material="src: #hirosquire; side: double"></a-plane>
+          <!-- RIGHT (+X) -->
+          <a-plane width="1" height="1" position="0.5 0 0" rotation="0 -90 0"
+                   material="src: #hiroknight; side: double"></a-plane>
+          <!-- LEFT (-X) -->
+          <a-plane width="1" height="1" position="-0.5 0 0" rotation="0 90 0"
+                   material="src: #hirofriar; side: double"></a-plane>
+          <!-- TOP (+Y) -->
+          <a-plane width="1" height="1" position="0 0.5 0" rotation="-90 0 0"
+                   material="src: #hirotitle; side: double"></a-plane>
+          <!-- BOTTOM (-Y) -->
+          <a-plane width="1" height="1" position="0 -0.5 0" rotation="90 0 0"
+                   material="src: #hirobottom; side: double"></a-plane>
         </a-entity>
-      </a-marker>
-
-      <a-entity camera></a-entity>
+      </a-entity>
     </a-scene>
+
+    <div class="hint">Point your camera at the postcard image to see the cube. Drag to spin. Flick to glide.</div>
   </body>
 </html>
